# exponential

./: .dockerignore  .env.example  .gitignore  .stackblitzrc  AGENTS.md  CLAUDE.md  Caddyfile.example  Cargo.toml  Dockerfile  Dockerfile.push-relay  Dockerfile.steer-relay  LICENSE  README.md  docker-compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.exponential/: config.json
.gitea/workflows/: build-android.yml  build-release.yml
.github/workflows/: README.md  build-android.yml  build-desktop.yml  build-issues-web.yml  test.yml
apps/android/: .gitignore  Gemfile  settings.gradle.kts
apps/companion/: README.md  package.json  tsconfig.json
apps/desktop/: Cargo.toml  deny.toml  rust-toolchain.toml
apps/desktop/.cargo/: config.toml
apps/desktop/assets/: .gitkeep
apps/desktop/assets/icons/: LICENSE.txt
apps/desktop/assets/packaging/: Info.plist  exponential.desktop
apps/desktop/crates/api/: Cargo.toml
apps/desktop/crates/api/src/: accounts.rs  actions.rs  boards.rs  coding_sessions.rs  comments.rs  encode.rs  error.rs  helpdesk.rs  issues.rs  labels.rs  lib.rs  login.rs  notifications.rs  opener.rs  patch.rs  projects.rs  releases.rs  repositories.rs  run_configs.rs  steer.rs  teams.rs  token_store.rs  trpc.rs  trust_store.rs  users.rs  workspaces.rs
apps/desktop/crates/app/: Cargo.toml  build.rs
apps/desktop/crates/app/resources/: app.rc
apps/desktop/crates/app/src/: actions.rs  assets.rs  channel.rs  desktop_integration.rs  macos_integration.rs  main.rs  menus.rs  single_instance.rs  windows.rs  windows_integration.rs  x11_window_icon.rs
apps/desktop/crates/coding/: Cargo.toml
apps/desktop/crates/coding/src/: action_prompt.rs  agent.rs  agents_json.rs  argv.rs  batch_launcher.rs  batch_prompt.rs  claude_task.rs  clone_manager.rs  codex_sessions.rs  doctor.rs  git_credentials.rs  git_worktree.rs  launcher.rs  lib.rs  mcp_json.rs  pi_bridge.rs  prompt.rs  release_launcher.rs  release_prompt.rs  run_launch.rs  scm.rs  settings.rs  test_support.rs  token_cache.rs  token_refresh.rs  trunk_state.rs  worktree_agents.rs
apps/desktop/crates/coding/tests/: concurrent.rs  dry_run.rs
apps/desktop/crates/domain/: Cargo.toml
apps/desktop/crates/domain/src/: board.rs  client_version.rs  contract.generated.rs  enums.rs  filters.rs  hydrate.rs  lib.rs  options.rs  rows.rs
apps/desktop/crates/steer/: Cargo.toml
apps/desktop/crates/steer/examples/: exp72_remote_enter.rs
apps/desktop/crates/steer/src/: activity.rs  control_channel.rs  frames.rs  lib.rs  plan_picker.rs  publisher.rs  question_picker.rs  ring.rs
apps/desktop/crates/steer/tests/: plan_picker_live.rs  relay_integration.rs
apps/desktop/crates/steer/tests/support/: mint_ticket.ts
apps/desktop/crates/sync/: Cargo.toml
apps/desktop/crates/sync/src/: client.rs  collections.rs  kill_watch.rs  lib.rs  manager.rs  protocol.rs  shapes.rs  store.rs
apps/desktop/crates/sync/tests/: engine.rs  protocol.rs  store.rs
apps/desktop/crates/terminal/: Cargo.toml
apps/desktop/crates/terminal/src/: element.rs  emulator.rs  keys.rs  lib.rs  manager.rs  mouse.rs  pty.rs  read_loop.rs  session.rs  tab.rs
apps/desktop/crates/terminal/tests/: exit_hook.rs  headless.rs
apps/desktop/crates/theme/: Cargo.toml
apps/desktop/crates/theme/src/: lib.rs  terminal.rs  tokens.generated.rs
apps/desktop/crates/ui/: Cargo.toml
apps/desktop/crates/ui/src/: actions.rs  actions_panel.rs  active_filter_pills.rs  attachments_row.rs  board.rs  coding_flow.rs  coding_selects.rs  comments.rs  create_board_dialog.rs  create_issue_dialog.rs  create_project_dialog.rs  create_release_dialog.rs  create_team_dialog.rs  create_workspace_dialog.rs  debug_board.rs  description_editor.rs  diff.rs  feedback.rs  file_tree.rs  file_viewer.rs  filter_bar.rs  filter_popover.rs  flow_lanes.rs  flow_view.rs  git_bar.rs  github_connect.rs  icons.rs  image_preview.rs  inbox.rs  issue_changes.rs  issue_detail.rs  issue_list.rs  join_team.rs  join_workspace.rs  lib.rs  login.rs  mention_input.rs  my_issues.rs  navigation.rs  oauth.rs  (+32 more)
apps/desktop/crates/ui/src/diff/: highlight.rs  patch.rs
apps/desktop/crates/ui/src/diff/fixtures/: github-pr-ts.patch  theme-lib-rs.patch
apps/desktop/crates/ui/src/markdown/: autocomplete.rs  blocks.rs  editor.rs  image_paste.rs  image_url.rs  mod.rs  parse.rs  serialize.rs  toolbar.rs
apps/desktop/crates/ui/src/settings/: account.rs  appearance.rs  boards.rs  coding.rs  labels.rs  local_repos.rs  members.rs  mod.rs  notifications_prefs.rs  projects.rs  repositories.rs  team_general.rs  workspace_general.rs
apps/desktop/crates/updater/: Cargo.toml
apps/desktop/crates/updater/src/: lib.rs
apps/desktop/crates/ztracing/: Cargo.toml
apps/desktop/crates/ztracing/src/: lib.rs
apps/desktop/crates/ztracing_macro/: Cargo.toml
apps/desktop/crates/ztracing_macro/src/: lib.rs
apps/desktop/scripts/: build-appimage.sh  build-macos-app.sh  build-macos-dmg.sh
apps/ios/: .gitignore  Exponential.entitlements  ExponentialApp.entitlements  ExponentialAppStaging.entitlements  ExponentialMac.entitlements  ExponentialStaging.entitlements  Gemfile  (+1 more)
crates/agent-core/: Cargo.toml  README.md  cbindgen.toml
crates/agent-core/examples/: smoke.c
crates/agent-core/include/: agent_core.h
crates/agent-core/src/: agent_run.rs  dispatcher.rs  domain_contract.rs  electric.rs  ffi.rs  git.rs  github.rs  lib.rs  mcp.rs  mcp_config.rs  pipeline.rs  pr_poll.rs  run_pipeline.rs  session.rs  state.rs  trpc.rs
docs/: README.md  agent-redesign-handoff.md  github.md  handoff-mac.md  macos-agent-first-handoff.md  macos-preview-handoff.md  macos-setup-vm.md  macos-ui-parity-plan.md  marketing-playbook.md  masterplan-v3.md  masterplan.md  native-desktop-roadmap.md  phase-f-mac-handoff.md  release-android.md  release-ios.md  run-vm.md  ses-production-access.md  vision.md
marketing/: package.json  tsconfig.json  vite.config.ts
public/: manifest.json  sw.js
scripts/: garage-init.sh  patch-server.mjs
src/: routeTree.gen.ts  server-bun.ts  server.ts  styles.css
(+1764 files in other folders)
