[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.0"
license = "Apache-2.0"

[workspace.dependencies]
# gpui + backend selector + macros pinned to gpui-component's EXACT rev (LD-7,
# masterplan-v3 §3.1) — verified against the pinned gpui-component workspace
# Cargo.toml (it declares these same three at this same zed rev, with the same
# gpui_platform feature set). Crate versions at this rev (Spike B): gpui 0.2.2,
# gpui_platform 0.1.0, gpui_macros 0.1.0.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui_macros = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# gpui-component is pinned by GIT REV, never by crates.io version. WARNING: crates.io
# hosts an unrelated/older registry `gpui 0.2.2` and a `gpui-component 0.5.1` that
# depends on it — resolving either would pull a SECOND gpui package id alongside the
# git-pinned gpui above and split every gpui type in the tree (0.5.2 exists only in
# git; it is not published). Never use the registry versions.
# NB: gpui-component's own workspace carries a `[patch.crates-io]` for psm/stacker —
# that patch is WASM-only tooling and is NOT needed here (confirmed by building this
# workspace without it); cargo does not apply a git dependency's patch sections anyway.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c" }
# Ships the 99 SVG icons gpui-component's `IconName` enum is generated from —
# already a regular dependency of gpui-component itself (its build.rs publishes
# the icons dir for the icon_named! macro), so this adds no new tree weight.
# The app's AssetSource delegates icon lookups to it (§3.6 with_assets).
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c" }
# The `icon_named!` proc macro (same pinned rev) — generates the project-local
# `ExpIcon` enum from `apps/desktop/assets/icons/` (masterplan-v3 §4.7: several
# Lucide glyphs the option tables need are not in the bundled IconName set).
gpui-component-macros = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c" }

alacritty_terminal = "0.26"                                            # UPSTREAM, Apache-2.0 — never Zed's GPL fork (resolves 0.26.0)
portable-pty = "0.9"                                                   # resolves 0.9.0
vte = { version = "0.15", features = ["std", "ansi"] }                 # "std" is required for StdSyncHandler (§6.4)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }  # feature set matches §5.1
ureq = { version = "2", features = ["tls"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"
anyhow = "1"
rust-embed = "8"    # embeds assets/ (Inter TTFs, future icons) into the binary — no runtime asset paths (§3.7)
dirs = "6"          # per-user state dir for the DockAreaState layout persistence (§3.3)
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# Steer publisher stream/sink combinators (§8) — already a transitive of
# tokio-tungstenite at this exact minor version; adds no new tree weight.
futures-util = "0.3"
# Persistent steer deviceId (§8.2) — uuid 1.x is already in the tree via gpui.
uuid = { version = "1", features = ["v4"] }
# §7.5 stop semantics (SIGTERM → grace → SIGKILL): direct signal delivery —
# portable-pty's ChildKiller only speaks SIGHUP. Already in the tree
# transitively (portable-pty, gpui) at this exact major.
libc = "0.2"

# Dev-profile opt-level overrides for the heavy layout/render/text crates
# (masterplan-v3 §3.7 — adopted from gpui-component's own workspace, which does
# exactly this; without them dev-profile layout is painfully slow).
[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
smol = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ropey = { opt-level = 3 }
sum_tree = { opt-level = 3 }
# The remainder of gpui-component's own dev list (same rationale, same source).
lsp-types = { opt-level = 3 }
markdown = { opt-level = 3 }
xml5ever = { opt-level = 3 }
