[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.8.23"
# Source-available, NOT Apache-2.0 and NOT open source: the whole repo is under the
# Exponential Small Team License 1.0 (verbatim text in the repo-root LICENSE). There
# is no SPDX id for it, so this is an SPDX `LicenseRef-` document reference. Do NOT
# switch this to `license-file` — the two keys are mutually exclusive, and every crate
# inherits this one via `license.workspace = true`.
license = "LicenseRef-ESTL-1.0"

[workspace.dependencies]
# gpui + backend selector + macros pinned to gpui-component's EXACT rev (LD-7,
# masterplan-v3 §3.1) — verified against the pinned gpui-component workspace
# Cargo.toml (it declares these same three at this same zed rev, with the same
# gpui_platform feature set). Crate versions at this rev (Spike B): gpui 0.2.2,
# gpui_platform 0.1.0, gpui_macros 0.1.0.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui_macros = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# gpui-component is pinned by GIT REV, never by crates.io version. WARNING: crates.io
# hosts an unrelated/older registry `gpui 0.2.2` and a `gpui-component 0.5.1` that
# depends on it — resolving either would pull a SECOND gpui package id alongside the
# git-pinned gpui above and split every gpui type in the tree (0.5.2 exists only in
# git; it is not published). Never use the registry versions.
# NB: gpui-component's own workspace carries a `[patch.crates-io]` for psm/stacker —
# that patch is WASM-only tooling and is NOT needed here (confirmed by building this
# workspace without it); cargo does not apply a git dependency's patch sections anyway.
# `tree-sitter-languages` (the §7.8 diff-view grammar pack) is declared HERE,
# not on the ui crate: gpui-component reaches the graph through two paths (ui,
# and theme via terminal), and a feature requested by only one of them makes
# per-crate selections (`cargo test -p coding` etc.) resolve a SECOND,
# featureless gpui-component — a full duplicate ~126MB rlib per target dir
# (EXP-76). One workspace-level feature set ⇒ one build variant everywhere.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c", features = ["tree-sitter-languages"] }
# Ships the 99 SVG icons gpui-component's `IconName` enum is generated from —
# already a regular dependency of gpui-component itself (its build.rs publishes
# the icons dir for the icon_named! macro), so this adds no new tree weight.
# The app's AssetSource delegates icon lookups to it (§3.6 with_assets).
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c" }
# The `icon_named!` proc macro (same pinned rev) — generates the project-local
# `ExpIcon` enum from `apps/desktop/assets/icons/` (masterplan-v3 §4.7: several
# Lucide glyphs the option tables need are not in the bundled IconName set).
gpui-component-macros = { git = "https://github.com/longbridge/gpui-component", rev = "a9a7341c35b62f27ff512371c62419342264710c" }

alacritty_terminal = "0.26"                                            # UPSTREAM, Apache-2.0 — never Zed's GPL fork (resolves 0.26.0)
portable-pty = "0.9"                                                   # resolves 0.9.0
vte = { version = "0.15", features = ["std", "ansi"] }                 # "std" is required for StdSyncHandler (§6.4)
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }  # feature set matches §5.1
ureq = { version = "2", features = ["tls"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"
anyhow = "1"
rust-embed = "8"    # embeds assets/ (Inter TTFs, future icons) into the binary — no runtime asset paths (§3.7)
dirs = "6"          # per-user state dir for the DockAreaState layout persistence (§3.3)
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# Steer publisher stream/sink combinators (§8) — already a transitive of
# tokio-tungstenite at this exact minor version; adds no new tree weight.
futures-util = "0.3"
# Persistent steer deviceId (§8.2) — uuid 1.x is already in the tree via gpui.
uuid = { version = "1", features = ["v4"] }
# PKCE S256 challenge for the OAuth deep-link code exchange (REV-13) — already
# in the tree transitively (rustls et al.) at this exact minor; no new weight.
sha2 = "0.10"
# §7.5 stop semantics (SIGTERM → grace → SIGKILL): direct signal delivery —
# portable-pty's ChildKiller only speaks SIGHUP. Already in the tree
# transitively (portable-pty, gpui) at this exact major.
libc = "0.2"

# EXP-222: zed's `ztracing`/`ztracing_macro` (and `zlog`, reachable only through
# ztracing) are GPL-3.0-or-later — statically linking them into the shipped binary
# is incompatible with the ESTL-1.0 headcount cap (a GPL-3.0 §5 "additional
# restriction"). The rest of the pinned zed/gpui-component stack is Apache-2.0 or
# permissive. These clean-room no-op shims replace the whole consumed API surface
# (only `sum_tree`'s `#[instrument]` in practice — the workspace never sets
# `--cfg ztracing`, so upstream is inert no-ops in our builds anyway). Do NOT fix
# by bumping the gpui rev instead: ztracing is GPL on zed main too. Guarded by
# `cargo deny check licenses` (deny.toml) in build-desktop.yml.
[patch."https://github.com/zed-industries/zed"]
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }

# Debuginfo is the bulk of a debug tree on this dependency set (EXP-76: ~8GB
# per fresh build, most of it dep debuginfo plus the ~7k .o files macOS's
# split-debuginfo=unpacked keeps around as its containers). Workspace crates
# keep line tables (readable backtraces); dependencies build with none — gpui
# internals are not stepped through here, and full var-info debugging of a dep
# is a one-off `cargo clean -p` away.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

# Dev-profile opt-level overrides for the heavy layout/render/text crates
# (masterplan-v3 §3.7 — adopted from gpui-component's own workspace, which does
# exactly this; without them dev-profile layout is painfully slow). Each entry
# repeats `debug = false` because a named override shadows the `"*"` table —
# per-key fallback from a named entry to `"*"` is not something to rely on.
[profile.dev.package]
gpui = { opt-level = 3, debug = false }
gpui_platform = { opt-level = 3, debug = false }
gpui_macros = { opt-level = 3, debug = false }
taffy = { opt-level = 3, debug = false }
resvg = { opt-level = 3, debug = false }
rustybuzz = { opt-level = 3, debug = false }
ttf-parser = { opt-level = 3, debug = false }
smol = { opt-level = 3, debug = false }
tree-sitter = { opt-level = 3, debug = false }
ropey = { opt-level = 3, debug = false }
sum_tree = { opt-level = 3, debug = false }
# The remainder of gpui-component's own dev list (same rationale, same source).
lsp-types = { opt-level = 3, debug = false }
markdown = { opt-level = 3, debug = false }
xml5ever = { opt-level = 3, debug = false }
