[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared agent loop for the Exponential desktop apps (macOS Swift + Linux Zig), exposed over a C ABI."

[lib]
name = "agent_core"
# cdylib   -> the dynamic library Swift/Zig link against and bundle.
# staticlib -> for static linking / smoke-test harnesses.
# rlib     -> lets `cargo test` build a Rust test harness against the lib.
crate-type = ["cdylib", "staticlib", "rlib"]

# M6 brings in the loop's I/O deps. We use a THREADED model (no tokio) with a
# blocking HTTP client (ureq, native-tls → system openssl, avoiding a ring/aws-lc
# build) and rusqlite (bundled sqlite). pipeline.rs stays dependency-free.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
# Kill a headless run's whole process group (grandchildren hold the stdout pipe).
libc = "0.2"
