[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Staging/dev channel: moves the app data dir aside (`exponential-staging` /
# `at.exponential.staging`) so staging and production builds never share
# accounts.json, sync state, or the single-instance socket.
staging = []

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
flume = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }
# §7.3.5 per-device Trust & Run store ((device_id, project_id) → trusted_hash
# + the last-selected run config per project) — a tiny sqlite in the
# per-account dir (trust_store.rs).
rusqlite = { workspace = true }
# §7.7 stable per-install deviceId (a UUID in the local config; shared by the
# trust store and steer presence).
uuid = { workspace = true }

# NOTE (locked decision 2026-07-03): secrets are ALWAYS file-based (0600/0700,
# see token_store.rs) — never the OS keyring. The keyring crate was removed:
# its macOS Keychain backend re-prompts on every rebuild of an unsigned dev
# binary, and Secret Service is absent on headless Linux anyway.
