[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "exp-desktop"
path = "src/main.rs"

[features]
# Staging/dev channel: targets next.exponential.at and installs a distinct
# `.desktop` app id so a staging build can coexist with a production one.
staging = ["ui/staging"]

[dependencies]
ui = { path = "../ui" }
theme = { path = "../theme" }
domain = { path = "../domain" }
sync = { path = "../sync" }
api = { path = "../api" }
terminal = { path = "../terminal" }
steer = { path = "../steer" }
coding = { path = "../coding" }
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
rust-embed.workspace = true
anyhow.workspace = true
flume.workspace = true
dirs.workspace = true

# macOS: assert this bundle as the default `exp://` handler at startup
# (self-registration, the Linux `desktop_integration` analog). core-foundation
# 0.9 is already in the tree via gpui, so this adds no new weight; it wraps the
# CFString / CFBundle handles the LaunchServices FFI needs.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
