[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "exp-desktop"
path = "src/main.rs"

# Windows: embed the app icon into exp-desktop.exe (EXP-20). embed-resource is
# already in the tree as gpui's own build-dep, so this pulls in no new crate;
# build.rs no-ops on every non-Windows target, so the dep stays unconditional
# (a target-gated build-dep would make build.rs fail to compile off-Windows).
[build-dependencies]
embed-resource = "3"

[features]
# Staging/dev channel: targets next.exponential.at, installs a distinct
# `.desktop` app id, and uses a separate data dir so a staging build can
# coexist with a production one without sharing saved accounts.
staging = ["ui/staging", "api/staging"]

[dependencies]
ui = { path = "../ui" }
theme = { path = "../theme" }
domain = { path = "../domain" }
sync = { path = "../sync" }
api = { path = "../api" }
terminal = { path = "../terminal" }
steer = { path = "../steer" }
coding = { path = "../coding" }
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
rust-embed.workspace = true
anyhow.workspace = true
flume.workspace = true
dirs.workspace = true

# macOS: assert this bundle as the default `exponential://` handler at startup
# (self-registration, the Linux `desktop_integration` analog). core-foundation
# 0.9 is already in the tree via gpui, so this adds no new weight; it wraps the
# CFString / CFBundle handles the LaunchServices FFI needs.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
