[package]
name = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theme = { path = "../theme" }
domain = { path = "../domain" }
sync = { path = "../sync" }
api = { path = "../api" }
terminal = { path = "../terminal" }
coding = { path = "../coding" }
steer = { path = "../steer" }
