[package]
name = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theme = { path = "../theme" }
domain = { path = "../domain" }
sync = { path = "../sync" }
api = { path = "../api" }
terminal = { path = "../terminal" }
coding = { path = "../coding" }
steer = { path = "../steer" }
gpui.workspace = true
gpui-component.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true
log = "0.4"
