# Clean-room no-op stand-in for Zed's `ztracing_macro` (GPL-3.0-or-later),
# substituted via the `[patch."https://github.com/zed-industries/zed"]` section in
# the workspace Cargo.toml (EXP-222). Version pinned to the upstream crate's so the
# patch stays a valid candidate for the git dependency it replaces.
[package]
name = "ztracing_macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true
